force-app/main/default/objects/custom_create138__c/custom_create138__c.object-meta.xml
<CustomObject>
    <label>Custom created object138</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects138</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>