force-app/main/default/objects/custom_create138__c/fields/custom_create_138field501__c.field-meta.xml
<CustomField>
    <fullName>custom_create_138field501__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 138field501</label>
    <type>Checkbox</type>
</CustomField>