force-app/main/default/objects/custom_create138__c/fields/custom_create_138field537__c.field-meta.xml
<CustomField>
    <fullName>custom_create_138field537__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 138field537</label>
    <type>Checkbox</type>
</CustomField>